Latest Changes done till 16/Dec/2024

--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -128,3 +128,9 @@
   color: white !important;
   border-radius: 30px;
 }
+
+.classifyBtn:disabled {
+  background: #ddd !important;
+  color: #888 !important;
+  border-radius: 30px;
+}
